--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Health</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
@@ -56,7 +57,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="container">
-                            <div class="row justify-content-beetwen">
+                            <div class="row justify-content-center">
                                 <div class="product col-lg">
                                     <div class="btn-group" role="group" aria-label="Basic example">
                                         <button type="button" class="btn btn-secondary">
@@ -162,7 +163,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="container">
-                            <div class="row justify-content-between">
+                            <div class="row justify-content-center">
                                 <div class="product col-lg">
                                     <div class="btn-group" role="group" aria-label="Basic example">
                                         <button type="button" class="btn btn-secondary">
@@ -268,7 +269,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="container">
-                            <div class="row justify-content-between">
+                            <div class="row justify-content-center">
                                 <div class="product col-lg">
                                     <div class="btn-group" role="group" aria-label="Basic example">
                                         <button type="button" class="btn btn-secondary">
@@ -374,7 +375,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="container">
-                            <div class="row justify-content-between">
+                            <div class="row justify-content-center">
                                 <div class="product col-lg">
                                     <div class="btn-group" role="group" aria-label="Basic example">
                                         <button type="button" class="btn btn-secondary">
