--- a/app/index.html
+++ b/app/index.html
@@ -7,9 +7,9 @@
     <title>Health</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="libs/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
 
 </head>
 <body>
@@ -484,8 +484,8 @@
         </div>                      
     </section>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="libs/js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/libs.min.js"></script>
+    <script src="js/script.min.js"></script>
 
 </body>
 </html>
